@@ -27,6 +27,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include "show.h"
 #include "confgr.h"
 #include "modes.h"
+#include <memory>
 
 extern wxFont *pointLabelFont;
 
@@ -161,6 +162,7 @@ bool drawall, int point)
 	dc->SetFont(wxNullFont);
 }
 
+// draw text centered around x (though still at y down)
 void DrawCenteredText(wxDC& dc, const wxString& text, const wxPoint& pt)
 {
 	wxCoord w, h;
@@ -169,6 +171,7 @@ void DrawCenteredText(wxDC& dc, const wxString& text, const wxPoint& pt)
 	dc.DrawText(text, w, pt.y);
 }
 
+// draw text centered around x (though still at y down) with a line over it.
 void DrawLineOverText(wxDC& dc, const wxString& text, const wxPoint& pt, wxCoord lineLength)
 {
 	DrawCenteredText(dc, text, pt + wxPoint(0,2));
@@ -191,49 +194,63 @@ void DrawArrow(wxDC& dc, const wxPoint& pt, wxCoord lineLength, bool pointRight)
 	}
 }
 
-
-size_t TabStops(size_t which)
+// calculate the distance for tab stops
+size_t TabStops(size_t which, bool landscape)
 {
 	size_t tab = 0;
 	while (which > 4)
 	{
 		which--;
-		tab += 6;
+		tab += (landscape)?8:6;
 	}
 	switch (which)
 	{
 		case 3:
 			tab += 8;
 		case 2:
-			tab += 14;
+			tab += (landscape)?18:14;
 		case 1:
-			tab += 6;
+			tab += (landscape)?10:6;
 	}
 	return tab;
 }
 
-size_t TabStopsLandscape(size_t which)
-{
-	size_t tab = 0;
-	while (which > 4)
-	{
-		which--;
-		tab += 8;
-	}
-	switch (which)
-	{
-		case 3:
-			tab += 8;
-		case 2:
-			tab += 18;
-		case 1:
-			tab += 10;
-	}
-	return tab;
-}
+// these are the sizes that the page is set up to do.
+static const double kSizeX = 576, kSizeY = 734;
+static const double kSizeXLandscape = 917, kSizeYLandscape = 720;
+static const double kHeaderLocation[2][2] = { { 0.5, 18/kSizeY }, { 0.5, 22/kSizeYLandscape } };
+static const wxString kHeader = wxT("UNIVERSITY OF CALIFORNIA MARCHING BAND");
+static const double kUpperNumberPosition[2][2] = { { 1.0 - 62/kSizeX, 36/kSizeY }, { 1.0 - 96/kSizeXLandscape, 36/kSizeYLandscape } };
+static const double kLowerNumberPosition[2][2] = { { 1.0 - 62/kSizeX, 720/kSizeY }, { 1.0 - 96/kSizeXLandscape, 680/kSizeYLandscape } };
+static const double kLowerNumberBox[2][4] = { { 1.0 - 90/kSizeX, 714/kSizeY, 56/kSizeX, 28/kSizeY }, { 1.0 - 124/kSizeXLandscape, 674/kSizeYLandscape, 56/kSizeXLandscape, 28/kSizeYLandscape } };
+static const double kMusicLabelPosition[2][3] = { { 0.5, 60/kSizeY, 240/kSizeX }, { 0.5, 60/kSizeYLandscape, 400/kSizeXLandscape } };
+static const wxString kMusicLabel = wxT("Music");
+static const double kFormationLabelPosition[2][3] = { { 0.5, 82/kSizeY, 240/kSizeX }, { 0.5, 82/kSizeYLandscape, 400/kSizeXLandscape } };
+static const wxString kFormationLabel = wxT("Formation");
+
+static const double kGameLabelPosition[2][3] = { { 62/kSizeX, 50/kSizeY, 64/kSizeX }, { 96/kSizeXLandscape, 54/kSizeYLandscape, 78/kSizeXLandscape } };
+static const wxString kGameLabel = wxT("game");
+static const double kPageLabelPosition[2][3] = { { 1.0 - 62/kSizeX, 50/kSizeY, 64/kSizeX }, { 1.0 - 96/kSizeXLandscape, 54/kSizeYLandscape, 78/kSizeXLandscape } };
+static const wxString kPageLabel = wxT("page");
+static const double kSideLabelPosition[2][2] = { { 0.5, 580/kSizeY }, { 0.5, 544/kSizeYLandscape } };
+static const wxString kSideLabel = wxT("CAL SIDE");
+
+static const double kUpperSouthPosition[2][2] = { { 52/kSizeX, (76-8)/kSizeY }, { 76/kSizeXLandscape, (80-8)/kSizeYLandscape } };
+static const wxString kUpperSouthLabel = wxT("south");
+static const double kUpperSouthArrow[2][3] = { { 52/kSizeX, (76)/kSizeY, 40/kSizeX }, { 76/kSizeXLandscape, (80)/kSizeYLandscape, 40/kSizeXLandscape } };
+static const double kUpperNorthPosition[2][2] = { { 1.0 - 52/kSizeX, (76-8)/kSizeY }, { 1.0 - 76/kSizeXLandscape, (80-8)/kSizeYLandscape } };
+static const wxString kUpperNorthLabel = wxT("north");
+static const double kUpperNorthArrow[2][3] = { { 1.0 - 52/kSizeX, (76)/kSizeY, 40/kSizeX }, { 1.0 - 76/kSizeXLandscape, (80)/kSizeYLandscape, 40/kSizeXLandscape } };
+
+static const double kLowerSouthPosition[2][2] = { { 52/kSizeX, (570+8)/kSizeY }, { 76/kSizeXLandscape, (536+8)/kSizeYLandscape } };
+static const wxString kLowerSouthLabel = wxT("south");
+static const double kLowerSouthArrow[2][3] = { { 52/kSizeX, (570)/kSizeY, 40/kSizeX }, { 76/kSizeXLandscape, (536)/kSizeYLandscape, 40/kSizeXLandscape } };
+static const double kLowerNorthPosition[2][2] = { { 1.0 - 52/kSizeX, (570+8)/kSizeY }, { 1.0 - 76/kSizeXLandscape, (536+8)/kSizeYLandscape } };
+static const wxString kLowerNorthLabel = wxT("north");
+static const double kLowerNorthArrow[2][3] = { { 1.0 - 52/kSizeX, (570)/kSizeY, 40/kSizeX }, { 1.0 - 76/kSizeXLandscape, (536)/kSizeYLandscape, 40/kSizeXLandscape } };
 
 // draw the continuity starting at a specific offset
-void CC_sheet::DrawCont(wxDC *dc, const wxCoord yStart) const
+void CC_sheet::DrawCont(wxDC *dc, const wxCoord yStart, bool landscape) const
 {
 	float x, y;
 	wxCoord textw, texth, textd, maxtexth;
@@ -331,343 +348,7 @@ void CC_sheet::DrawCont(wxDC *dc, const wxCoord yStart) const
 					break;
 				case PSFONT_TAB:
 					tabnum++;
-					textw = charWidth * TabStops(tabnum);
-					if (textw >= x) x = textw;
-					else x += charWidth;
-					do_tab = true;
-					break;
-				default:
-					break;
-			}
-			if (c->font == PSFONT_SYMBOL)
-			{
-				dc->GetTextExtent(wxT("O"), &textw, &texth, &textd);
-				float d = textw;
-				SYMBOL_TYPE sym;
-
-				float top_y = y + texth - textd - d;
-
-				for (const wxChar *s = c->text; *s; s++)
-				{
-					{
-						dc->SetPen(*wxBLACK_PEN);
-						sym = (SYMBOL_TYPE)(*s - 'A');
-						switch (sym)
-						{
-							case SYMBOL_SOL:
-							case SYMBOL_SOLBKSL:
-							case SYMBOL_SOLSL:
-							case SYMBOL_SOLX:
-								dc->SetBrush(*wxBLACK_BRUSH);
-								break;
-							default:
-								dc->SetBrush(*wxTRANSPARENT_BRUSH);
-						}
-						dc->DrawEllipse(x, top_y, d, d);
-						switch (sym)
-						{
-							case SYMBOL_SL:
-							case SYMBOL_X:
-							case SYMBOL_SOLSL:
-							case SYMBOL_SOLX:
-								dc->DrawLine(x-1, top_y + d+1, x + d+1, top_y-1);
-								break;
-							default:
-								break;
-						}
-						switch (sym)
-						{
-							case SYMBOL_BKSL:
-							case SYMBOL_X:
-							case SYMBOL_SOLBKSL:
-							case SYMBOL_SOLX:
-								dc->DrawLine(x-1, top_y-1, x + d+1, top_y + d+1);
-								break;
-							default:
-								break;
-						}
-					}
-					x += d;
-				}
-			}
-			else
-			{
-				if (!do_tab)
-				{
-					dc->GetTextExtent(c->text, &textw, &texth, &textd);
-					printf("drawing text at %f\n", x);
-					dc->DrawText(c->text, x, y);
-					x += textw;
-				}
-			}
-		}
-		y += maxtexth;
-		++cont;
-	}
-
-	// restore everything
-	dc->SetUserScale(origXscale, origYscale);
-	dc->SetDeviceOrigin(origX, origY);
-	dc->SetTextForeground(origForegroundColor);
-	dc->SetFont(origFont);
-}
-
-
-void CC_sheet::DrawForPrinting(wxDC *dc, unsigned ref) const
-{
-	unsigned short i;
-	unsigned firstpoint, lastpoint;
-	unsigned long x, y;
-	wxCoord textw, texth, textd;
-	float circ_r;
-	CC_coord origin;
-
-	double originalScaleX, originalScaleY;
-	dc->GetUserScale(&originalScaleX, &originalScaleY);
-
-	// create a field for drawing:
-	CC_coord bord1(INT2COORD(8),INT2COORD(8)), bord2(INT2COORD(8),INT2COORD(8));
-	CC_coord siz, off;
-	uint32_t whash = 32;
-	uint32_t ehash = 52;
-	bord1.x = INT2COORD(6);
-	bord1.y = INT2COORD(19);
-	bord2.x = INT2COORD(6);
-	bord2.y = INT2COORD(6);
-	siz.x = INT2COORD(96);
-	siz.y = INT2COORD(84);
-	off.x = INT2COORD(48);
-	off.y = INT2COORD(42);
-	ShowMode* mode = new ShowModeStandard(wxT("Standard"), bord1, bord2, siz, off, whash, ehash);
-
-
-	// set the scaling for drawing the field
-	{
-		int pageW, pageH;
-		dc->GetSize(&pageW, &pageH);
-		dc->SetUserScale(pageW/(double)mode->Size().x, pageW/(double)mode->Size().x);
-	}
-
-	// draw the field.
-	dc->Clear();
-	dc->SetPen(*wxBLACK_PEN);
-	dc->SetTextForeground(*wxBLACK);
-	dc->SetLogicalFunction(wxCOPY);
-	mode->Draw(dc);
-
-	if (!pts.empty())
-	{
-		dc->SetFont(*pointLabelFont);
-		circ_r = FLOAT2COORD(dot_ratio);
-		const float offset = circ_r / 2;
-		const float plineoff = offset * pline_ratio;
-		const float slineoff = offset * sline_ratio;
-		const float textoff = offset * 1.25;
-		origin = mode->Offset();
-		firstpoint = 0;
-		lastpoint = show->GetNumPoints();
-		for (int selectd = 0; selectd < 2; selectd++)
-		{
-			for (i = firstpoint; i < lastpoint; i++)
-			{
-				x = GetPosition(i, ref).x+origin.x;
-				y = GetPosition(i, ref).y+origin.y;
-				switch (pts[i].sym)
-				{
-					case SYMBOL_SOL:
-					case SYMBOL_SOLBKSL:
-					case SYMBOL_SOLSL:
-					case SYMBOL_SOLX:
-						dc->SetBrush(*wxBLACK_BRUSH);
-						break;
-					default:
-						dc->SetBrush(*wxTRANSPARENT_BRUSH);
-				}
-				dc->DrawEllipse(x - offset, y - offset, circ_r, circ_r);
-				switch (pts[i].sym)
-				{
-					case SYMBOL_SL:
-					case SYMBOL_X:
-						dc->DrawLine(x - plineoff, y + plineoff,
-							x + plineoff, y - plineoff);
-						break;
-					case SYMBOL_SOLSL:
-					case SYMBOL_SOLX:
-						dc->DrawLine(x - slineoff, y + slineoff,
-							x + slineoff, y - slineoff);
-						break;
-					default:
-						break;
-				}
-				switch (pts[i].sym)
-				{
-					case SYMBOL_BKSL:
-					case SYMBOL_X:
-						dc->DrawLine(x - plineoff, y - plineoff,
-							x + plineoff, y + plineoff);
-						break;
-					case SYMBOL_SOLBKSL:
-					case SYMBOL_SOLX:
-						dc->DrawLine(x - slineoff, y - slineoff,
-							x + slineoff, y + slineoff);
-						break;
-					default:
-						break;
-				}
-				dc->GetTextExtent(show->GetPointLabel(i), &textw, &texth, &textd);
-				dc->DrawText(show->GetPointLabel(i),
-					pts[i].GetFlip() ? x : (x - textw),
-					y - textoff - texth + textd);
-			}
-		}
-	}
-
-	dc->SetBrush(*wxTRANSPARENT_BRUSH);
-	// draw the header
-	dc->SetUserScale(originalScaleX, originalScaleY);
-	dc->SetFont(*wxTheFontList->FindOrCreateFont(16, wxROMAN, wxNORMAL, wxBOLD));
-	dc->SetPen(*wxThePenList->FindOrCreatePen(*wxBLACK, 1, wxSOLID));
-	int pageW, pageH;
-	dc->GetSize(&pageW, &pageH);
-	wxPoint pt(pageW/2, 18);
-	DrawCenteredText(*dc, wxT("UNIVERSITY OF CALIFORNIA MARCHING BAND"), pt);
-
-	DrawCenteredText(*dc, GetNumber(), wxPoint(pageW-(62), 36));
-	DrawCenteredText(*dc, GetNumber(), wxPoint(pageW-(62), 720));
-	dc->DrawRectangle(pageW-(90), 714, 56, 28);
-
-	dc->SetFont(*wxTheFontList->FindOrCreateFont(8, wxSWISS, wxNORMAL, wxNORMAL));
-
-	DrawLineOverText(*dc, wxT("Music"), wxPoint(pageW/2, 60), 240);
-	DrawLineOverText(*dc, wxT("Formation"), wxPoint(pageW/2, 82), 240);
-
-	DrawLineOverText(*dc, wxT("game"), wxPoint(62, 50), 64);
-	DrawLineOverText(*dc, wxT("page"), wxPoint(pageW-(62), 50), 64);
-
-	// draw arrows
-	pt = wxPoint(52, 76);
-	DrawCenteredText(*dc, wxT("south"), pt-wxPoint(0,8));
-	DrawArrow(*dc, pt, 40, false);
-	pt = wxPoint(pageW-(52), 76);
-	DrawCenteredText(*dc, wxT("north"), pt-wxPoint(0,8));
-	DrawArrow(*dc, pt, 40, true);
-
-	// draw arrows
-	pt = wxPoint(52, 570);
-	DrawCenteredText(*dc, wxT("south"), pt+wxPoint(0,8));
-	DrawArrow(*dc, pt, 40, false);
-	pt = wxPoint(pageW-(52), 570);
-	DrawCenteredText(*dc, wxT("north"), pt+wxPoint(0,8));
-	DrawArrow(*dc, pt, 40, true);
-
-	DrawCenteredText(*dc, wxT("CAL SIDE"), wxPoint(pageW/2,580));
-
-	DrawCont(dc, 606);
-
-	dc->SetFont(wxNullFont);
-	
-}
-
-// draw the continuity starting at a specific offset
-void CC_sheet::DrawContLandscape(wxDC *dc, const wxCoord yStart) const
-{
-	float x, y;
-	wxCoord textw, texth, textd, maxtexth;
-
-	wxCoord origX, origY;
-	double origXscale, origYscale;
-
-	dc->GetDeviceOrigin(&origX, &origY);
-	dc->GetUserScale(&origXscale, &origYscale);
-	const wxColour& origForegroundColor = dc->GetTextForeground();
-	const wxFont& origFont = dc->GetFont();
-
-	// we set the font large then scale down to give fine detail on the page
-	wxFont *contPlainFont = wxTheFontList->FindOrCreateFont(20, wxMODERN, wxNORMAL, wxNORMAL);
-	wxFont *contBoldFont = wxTheFontList->FindOrCreateFont(20, wxMODERN, wxNORMAL, wxBOLD);
-	wxFont *contItalFont = wxTheFontList->FindOrCreateFont(20, wxMODERN, wxITALIC, wxNORMAL);
-	wxFont *contBoldItalFont = wxTheFontList->FindOrCreateFont(20, wxMODERN, wxITALIC, wxBOLD);
-
-	dc->SetDeviceOrigin(20, yStart);
-	dc->SetUserScale(0.42, 0.42);
-	dc->SetTextForeground(*wxBLACK);
-	dc->SetFont(*contPlainFont);
-
-	int pageW, pageH;
-	dc->GetSize(&pageW, &pageH);
-	int pageMiddle = pageW/2 - 20;
-	pageMiddle /= 0.42;
-
-	y = 0.0;
-	const wxCoord charWidth = dc->GetCharWidth();
-	CC_textline_list::const_iterator cont(continuity.lines.begin());
-	while (cont != continuity.lines.end())
-	{
-		bool do_tab;
-		CC_textchunk_list::const_iterator c;
-		x = 0.0;
-		if (cont->center)
-		{
-			x += pageMiddle;
-			for (c = cont->chunks.begin();
-				c != cont->chunks.end();
-				++c)
-			{
-				do_tab = false;
-				switch (c->font)
-				{
-					case PSFONT_SYMBOL:
-						dc->GetTextExtent(wxT("O"), &textw, &texth, &textd);
-						x += textw * c->text.length();
-						break;
-					case PSFONT_NORM:
-						dc->SetFont(*contPlainFont);
-						break;
-					case PSFONT_BOLD:
-						dc->SetFont(*contBoldFont);
-						break;
-					case PSFONT_ITAL:
-						dc->SetFont(*contItalFont);
-						break;
-					case PSFONT_BOLDITAL:
-						dc->SetFont(*contBoldItalFont);
-						break;
-					case PSFONT_TAB:
-						do_tab = true;
-						break;
-				}
-				if (!do_tab && (c->font != PSFONT_SYMBOL))
-				{
-					dc->GetTextExtent(c->text, &textw, &texth, &textd);
-					x -= textw/2;
-				}
-			}
-		}
-		maxtexth = contPlainFont->GetPointSize()+2;
-		unsigned tabnum = 0;
-		for (c = cont->chunks.begin();
-			c != cont->chunks.end();
-			++c)
-		{
-			do_tab = false;
-			switch (c->font)
-			{
-				case PSFONT_NORM:
-				case PSFONT_SYMBOL:
-					dc->SetFont(*contPlainFont);
-					break;
-				case PSFONT_BOLD:
-					dc->SetFont(*contBoldFont);
-					break;
-				case PSFONT_ITAL:
-					dc->SetFont(*contItalFont);
-					break;
-				case PSFONT_BOLDITAL:
-					dc->SetFont(*contBoldItalFont);
-					break;
-				case PSFONT_TAB:
-					tabnum++;
-					textw = charWidth * TabStopsLandscape(tabnum);
+					textw = charWidth * TabStops(tabnum, landscape);
 					if (textw >= x) x = textw;
 					else x += charWidth;
 					do_tab = true;
@@ -747,12 +428,30 @@ void CC_sheet::DrawContLandscape(wxDC *dc, const wxCoord yStart) const
 	dc->SetFont(origFont);
 }
 
-void CC_sheet::DrawForPrintingLandscape(wxDC *dc, unsigned ref) const
+static const double kContinuityStart[2] = { 606/kSizeY, 464/kSizeYLandscape };
+
+static std::auto_ptr<ShowMode> CreateFieldForPrinting(bool landscape)
+{
+	CC_coord bord1(INT2COORD(8),INT2COORD(8)), bord2(INT2COORD(8),INT2COORD(8));
+	CC_coord siz, off;
+	uint32_t whash = 32;
+	uint32_t ehash = 52;
+	bord1.x = INT2COORD((landscape)?12:6);
+	bord1.y = INT2COORD((landscape)?21:19);
+	bord2.x = INT2COORD((landscape)?12:6);
+	bord2.y = INT2COORD((landscape)?12:6);
+	siz.x = INT2COORD((landscape)?160:96);
+	siz.y = INT2COORD(84);
+	off.x = INT2COORD((landscape)?80:48);
+	off.y = INT2COORD(42);
+
+	return std::auto_ptr<ShowMode>(new ShowModeStandard(wxT("Standard"), bord1, bord2, siz, off, whash, ehash));
+}
+
+void CC_sheet::DrawForPrinting(wxDC *dc, unsigned ref, bool landscape) const
 {
 	unsigned short i;
-	unsigned firstpoint, lastpoint;
 	unsigned long x, y;
-	wxCoord textw, texth, textd;
 	float circ_r;
 	CC_coord origin;
 
@@ -761,30 +460,19 @@ void CC_sheet::DrawForPrintingLandscape(wxDC *dc, unsigned ref) const
 	dc->GetDeviceOrigin(&origX, &origY);
 	dc->GetUserScale(&origXscale, &origYscale);
 
-	dc->SetDeviceOrigin(10, 0);
+	if (landscape)
+	{
+		dc->SetDeviceOrigin(10, 0);
+	}
 
 	// create a field for drawing:
-	CC_coord bord1(INT2COORD(8),INT2COORD(8)), bord2(INT2COORD(8),INT2COORD(8));
-	CC_coord siz, off;
-	uint32_t whash = 32;
-	uint32_t ehash = 52;
-	bord1.x = INT2COORD(12);
-	bord1.y = INT2COORD(21);
-	bord2.x = INT2COORD(12);
-	bord2.y = INT2COORD(12);
-	siz.x = INT2COORD(160);
-	siz.y = INT2COORD(84);
-	off.x = INT2COORD(80);
-	off.y = INT2COORD(42);
-	ShowMode* mode = new ShowModeStandard(wxT("Standard"), bord1, bord2, siz, off, whash, ehash);
+	std::auto_ptr<ShowMode> mode = CreateFieldForPrinting(landscape);
 
+	int pageW, pageH;
+	dc->GetSize(&pageW, &pageH);
 
 	// set the scaling for drawing the field
-	{
-		int pageW, pageH;
-		dc->GetSize(&pageW, &pageH);
-		dc->SetUserScale(pageW/(double)mode->Size().x, pageW/(double)mode->Size().x);
-	}
+	dc->SetUserScale(pageW/(double)mode->Size().x, pageW/(double)mode->Size().x);
 
 	// draw the field.
 	dc->Clear();
@@ -802,11 +490,9 @@ void CC_sheet::DrawForPrintingLandscape(wxDC *dc, unsigned ref) const
 		const float slineoff = offset * sline_ratio;
 		const float textoff = offset * 1.25;
 		origin = mode->Offset();
-		firstpoint = 0;
-		lastpoint = show->GetNumPoints();
 		for (int selectd = 0; selectd < 2; selectd++)
 		{
-			for (i = firstpoint; i < lastpoint; i++)
+			for (i = 0; i < show->GetNumPoints(); i++)
 			{
 				x = GetPosition(i, ref).x+origin.x;
 				y = GetPosition(i, ref).y+origin.y;
@@ -852,6 +538,7 @@ void CC_sheet::DrawForPrintingLandscape(wxDC *dc, unsigned ref) const
 					default:
 						break;
 				}
+				wxCoord textw, texth, textd;
 				dc->GetTextExtent(show->GetPointLabel(i), &textw, &texth, &textd);
 				dc->DrawText(show->GetPointLabel(i),
 					pts[i].GetFlip() ? x : (x - textw),
@@ -861,58 +548,54 @@ void CC_sheet::DrawForPrintingLandscape(wxDC *dc, unsigned ref) const
 	}
 
 	dc->SetBrush(*wxTRANSPARENT_BRUSH);
-	// draw the header
-	dc->SetUserScale(0.8, 0.8);
-
-	int pageW, pageH;
+	// set the page for drawing:
 	dc->GetSize(&pageW, &pageH);
-	pageW /= 0.8;
-	pageH /= 0.8;
+	if (landscape)
+	{
+		dc->SetUserScale(pageW/kSizeXLandscape, pageH/kSizeYLandscape);
+		pageW = kSizeXLandscape;
+		pageH = kSizeYLandscape;
+	}
+	else
+	{
+		dc->SetUserScale(pageW/kSizeX, pageH/kSizeY);
+		pageW = kSizeX;
+		pageH = kSizeY;
+	}
 
+	// draw the header
 	dc->SetFont(*wxTheFontList->FindOrCreateFont(16, wxROMAN, wxNORMAL, wxBOLD));
 	dc->SetPen(*wxThePenList->FindOrCreatePen(*wxBLACK, 1, wxSOLID));
-//	int pageW, pageH;
-//	// for landscape the sizes are reversed
-//	dc->GetSize(&pageH, &pageW);
-	wxPoint pt(pageW/2, 22);
-	DrawCenteredText(*dc, wxT("UNIVERSITY OF CALIFORNIA MARCHING BAND"), pt);
 
-	DrawCenteredText(*dc, GetNumber(), wxPoint(pageW-(96), 36));
-	DrawCenteredText(*dc, GetNumber(), wxPoint(pageW-(96), 680));
-	dc->DrawRectangle(pageW-(124), 674, 56, 28);
+	DrawCenteredText(*dc, kHeader, wxPoint(pageW*kHeaderLocation[landscape][0], pageH*kHeaderLocation[landscape][1]));
+
+	DrawCenteredText(*dc, GetNumber(), wxPoint(pageW*kUpperNumberPosition[landscape][0], pageH*kUpperNumberPosition[landscape][1]));
+	DrawCenteredText(*dc, GetNumber(), wxPoint(pageW*kLowerNumberPosition[landscape][0], pageH*kLowerNumberPosition[landscape][1]));
+	dc->DrawRectangle(pageW*kLowerNumberBox[landscape][0], pageH*kLowerNumberBox[landscape][1], pageW*kLowerNumberBox[landscape][2], pageH*kLowerNumberBox[landscape][3]);
 
 	dc->SetFont(*wxTheFontList->FindOrCreateFont(8, wxSWISS, wxNORMAL, wxNORMAL));
 
-	DrawLineOverText(*dc, wxT("Music"), wxPoint(pageW/2, 60), 400);
-	DrawLineOverText(*dc, wxT("Formation"), wxPoint(pageW/2, 82), 400);
-
-	DrawLineOverText(*dc, wxT("game"), wxPoint(96, 54), 78);
-	DrawLineOverText(*dc, wxT("page"), wxPoint(pageW-(96), 54), 78);
-
-	// draw arrows
-	pt = wxPoint(76, 80);
-	DrawCenteredText(*dc, wxT("south"), pt-wxPoint(0,8));
-	DrawArrow(*dc, pt, 40, false);
-	pt = wxPoint(pageW-(76), 80);
-	DrawCenteredText(*dc, wxT("north"), pt-wxPoint(0,8));
-	DrawArrow(*dc, pt, 40, true);
+	DrawLineOverText(*dc, kMusicLabel, wxPoint(pageW*kMusicLabelPosition[landscape][0], pageH*kMusicLabelPosition[landscape][1]), pageW*kMusicLabelPosition[landscape][2]);
+	DrawLineOverText(*dc, kFormationLabel, wxPoint(pageW*kFormationLabelPosition[landscape][0], pageH*kFormationLabelPosition[landscape][1]), pageW*kFormationLabelPosition[landscape][2]);
+	DrawLineOverText(*dc, kGameLabel, wxPoint(pageW*kGameLabelPosition[landscape][0], pageH*kGameLabelPosition[landscape][1]), pageW*kGameLabelPosition[landscape][2]);
+	DrawLineOverText(*dc, kPageLabel, wxPoint(pageW*kPageLabelPosition[landscape][0], pageH*kPageLabelPosition[landscape][1]), pageW*kPageLabelPosition[landscape][2]);
+	DrawCenteredText(*dc, kSideLabel, wxPoint(pageW*kSideLabelPosition[landscape][0], pageH*kSideLabelPosition[landscape][1]));
 
 	// draw arrows
-	pt = wxPoint(76, 536);
-	DrawCenteredText(*dc, wxT("south"), pt+wxPoint(0,8));
-	DrawArrow(*dc, pt, 40, false);
-	pt = wxPoint(pageW-(76), 536);
-	DrawCenteredText(*dc, wxT("north"), pt+wxPoint(0,8));
-	DrawArrow(*dc, pt, 40, true);
-
-	DrawCenteredText(*dc, wxT("CAL SIDE"), wxPoint(pageW/2,544));
+	DrawCenteredText(*dc, kUpperSouthLabel, wxPoint(pageW*kUpperSouthPosition[landscape][0], pageH*kUpperSouthPosition[landscape][1]));
+	DrawArrow(*dc, wxPoint(pageW*kUpperSouthArrow[landscape][0], pageH*kUpperSouthArrow[landscape][1]), pageW*kUpperSouthArrow[landscape][2], false);
+	DrawCenteredText(*dc, kUpperNorthLabel, wxPoint(pageW*kUpperNorthPosition[landscape][0], pageH*kUpperNorthPosition[landscape][1]));
+	DrawArrow(*dc, wxPoint(pageW*kUpperNorthArrow[landscape][0], pageH*kUpperNorthArrow[landscape][1]), pageW*kUpperNorthArrow[landscape][2], true);
+	DrawCenteredText(*dc, kLowerSouthLabel, wxPoint(pageW*kLowerSouthPosition[landscape][0], pageH*kLowerSouthPosition[landscape][1]));
+	DrawArrow(*dc, wxPoint(pageW*kLowerSouthArrow[landscape][0], pageH*kLowerSouthArrow[landscape][1]), pageW*kLowerSouthArrow[landscape][2], false);
+	DrawCenteredText(*dc, kLowerNorthLabel, wxPoint(pageW*kLowerNorthPosition[landscape][0], pageH*kLowerNorthPosition[landscape][1]));
+	DrawArrow(*dc, wxPoint(pageW*kLowerNorthArrow[landscape][0], pageH*kLowerNorthArrow[landscape][1]), pageW*kLowerNorthArrow[landscape][2], true);
 
 	dc->SetUserScale(origXscale, origYscale);
 	dc->SetDeviceOrigin(origX, origY);
 
-	DrawContLandscape(dc, 464);
+	DrawCont(dc, pageH*kContinuityStart[landscape], landscape);
 
 	dc->SetFont(wxNullFont);
 	
 }
-
